--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "watch" : "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
-    "clean": "rmdir /s /q dist",
+    "watch": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url ./"
+    "build": "parcel build src/index.html --public-url ./",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "parcel": "^2.11.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1"
