--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "scripts": {
     "watch": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url ./",
+    "dev": "parcel src/*.html",
+    "build": "parcel build src/*.html --dist-dir public --public-url ./",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d public"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,5 @@
     "parcel": "^2.11.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1"
-  },
-  "dependencies": {
-    "http-server": "^14.1.1"
   }
 }
